--- a/index.html
+++ b/index.html
@@ -2,10 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=BBH+Sans+Hegarty&family=Bytesized&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Noto+Sans+JP:wght@100..900&family=Noto+Sans+TC:wght@100..900&family=Oswald:wght@200..700&family=Playwrite+DE+Grund+Guides&family=Share+Tech&family=Story+Script&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Sneakers shop</title>
 </head>
 <body>
-    
+
+
+<div class="box">
+   <nav>
+
+  
+
+<a href="#"><img src="images/Sneakers Shop (projekti 3).jpg" alt="logooo" width="52px"></a>
+<div class="flex-container">
+<a href="products.html">Produktet</a>
+<a href="zbritje.html">Zbritjet</a>
+</div>
+
+<a href="login.html">Kyqu</a>
+
+
+
+   </nav> 
+</div>
 </body>
 </html>
