fic:adding the final part

--- a/index.html
+++ b/index.html
@@ -20,14 +20,59 @@
 <a href="#"><img src="images/Sneakers Shop (projekti 3).jpg" alt="logooo" width="52px"></a>
 <div class="flex-container">
 <a href="products.html">Produktet</a>
+
 <a href="zbritje.html">Zbritjet</a>
 </div>
 
 <a href="login.html">Kyqu</a>
 
-
-
    </nav> 
+
+
+<div class="hero-section">
+    <h1>Mire se vini ne Sneakers shop</h1>
+    <h4> Ketu gjeni atlete te ndryshme me brende te ndryshme dhe te stilit te fundit !</h4>
+    <button><a href="products.html" class="btn"> Shfleto Produktet </a></button>
 </div>
+
+<div class="products">
+<h3>Produktet me zbritje </h3>
+<h5>Zgjedh produkte cilesore , mire e lire!</h5>
+
+<div class="flex">
+<article>
+<img src="images/images.jpg" alt="produkti">
+<button>22$</button>
+</article>
+
+
+<article>
+<img src="images/images.jpg" alt="produkti" >
+<button>22$</button>
+</article>
+
+
+<article>
+<img src="images/images.jpg" alt="produkti">
+<button>22$</button>
+</article>
+
+<article>
+<img src="images/images.jpg" alt="produkti" >
+<button>22$</button>
+</article>
+
+</div>
+
+
+
+</div>
+
+<footer>
+    <img src="images/Sneakers Shop (projekti 3).jpg" alt="logooo" width="52px" >
+    <p>Rri i lidhur me Sneakers Shop </p>
+    <p>Politika e Privatesis</p>
+<p>Te drejtat e rezervuara @ 2025 Sneakers Shop </p>
+</footer>
 </body>
 </html>
